Refined header to include better search bar, icons, spacing, buttons. Fixed spacing for main content. Fixed resizing issue

--- a/style.css
+++ b/style.css
@@ -6,78 +6,154 @@
 .container {
     display: grid;
     height: 100vh;
-    grid-template-columns: 300px 4fr;
+    grid-template-columns: 250px 4fr;
     grid-template-rows: auto 1fr;
     grid-template-areas: 'sidebar header' 'sidebar content' ;
 }
 
 .container div {
-    font-size: 32px;
     font-family: Helvetica;
-    font-weight: bold;
 }
 
 .header {
     display: grid;
     grid-area: header;
-    padding: 0.5rem 2rem;
-    background-color: blue;
+    padding: 1rem 2rem;
+    background-color: #bfdbfe;
 }
 
+.search-container {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    max-width: 38.25rem;
+    padding: 1rem;
+    margin-right: auto;
+  }
+  
+  .label {
+    font-size: .625rem;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: +1.3px;
+    margin-bottom: 1rem;
+  }
+  
+  .searchBar {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding-right: 2rem;
+  }
+
+  #searchQueryInput {
+    flex: 1;
+    width: 100%;
+    height: 2.8rem;
+    background: #f5f5f5;
+    outline: none;
+    border: none;
+    border-radius: 1.625rem;
+    padding: 0 3.5rem 0 1.5rem;
+    font-size: 1rem;
+  }
+
+  #searchQuerySubmit {
+    width: 3.5rem;
+    height: 2.8rem;
+    margin-left: -3.5rem;
+    background: none;
+    border: none;
+    outline: none;
+  }
+  
+  #searchQuerySubmit:hover {
+    cursor: pointer;
+  }
+
 .sidebar {
-    background-color: orange;
+    background-color: #eff6ff;
     grid-area: sidebar;
     gap: 1.5rem;
     padding: 30px;
+}
 
+.sidebar-title {
+    display: flex;
+    gap: 0.5rem;
 }
  
 .sidebar ul  {
-    list-style: none;
     display: grid;
     gap: 2rem;
-    font-weight: lighter;
     font-size: 24px;
-    padding: 2rem;
+    padding-top: 3rem;
     
+}
+
+.sidebar ul li {
+    list-style: none;
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+.sidebar a {
+    text-decoration: none;
 }
 
 .top {
     display: grid;
     grid-template-columns: 1fr max-content;
+    padding-right: 1rem;
 }
 
 .bottom {
     display: grid;
     grid-template-columns: 1fr max-content;
+    justify-content: space-between;
+    padding-right: 1rem;
 }
 
 .greeting-container {
     display: flex;
     align-items: center;
     grid-template: 1fr 1fr / auto 1fr;
+    padding: 1rem;
+    gap: 1rem;
 }
 
-.search-container {
+.greeting-text {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+
+.header .profile-container {
     display: flex;
     align-items: center;
-}
-
-.profile-container {
-    display: grid;
-    align-items: center;
-    grid-template-columns: auto auto auto;
+    justify-content: space-evenly;
+    gap: 1.5rem;
 }
 
 .profile-buttons {
-    display: grid;
+    display: flex;
     align-items: center;
+    gap: 1.5rem;
 }
 
+.header-button {
+    background-color: #3b82f6;
+    color: white;
+    padding: 20px 40px 20px 40px ;
+    border: none;
+    border-radius: 99em;
+}
 
 .main-content {
     display: grid;
-    background-color: gray;
+    background-color: #93c5fd;
     grid-area: content;
     grid-template-columns: 1fr auto;
     grid-template-rows: min-content 1fr;
@@ -85,6 +161,10 @@
     gap: 2rem;
     padding: 2rem;
     overflow: auto;
+}
+
+.main-content h3 {
+    margin-bottom: 0.7rem;
 }
 
 .projects {
@@ -96,9 +176,13 @@
 
 .projects .cards {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-auto-rows: 250px;
     gap: 2rem;
+}
+
+.announcement {
+    width: 25ch;
 }
 
 
@@ -123,4 +207,12 @@
 
 p {
     font-size: 15px;
+}
+
+.sidebar-icon {
+    height: 1.5rem;
+}
+
+.logo {
+    font-size: 28px;
 }
